--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,45 +3,45 @@ version: '2.2'
 # We create one volume for each supported FHIR version. These volumes will
 # contain and persist the H2 database file
 volumes:
-  r2-database:
-  r3-database:
+  # r2-database:
+  # r3-database:
   r4-database:
 
 services:
 
-  r2: # ------------------------------------------------------------------------
-    container_name: hapi-r2
-    image: $R2_IMAGE
-    environment:
-      PORT: $R2_PORT
-    ports:
-      - $R2_PORT:8080
-    volumes:
-      - "r2-database:/usr/local/tomcat/target/database"
-    command: ["sh", "-c", "
-      envsubst < /tmp/hapi.properties.tpl > /config/hapi.properties &&
-      envsubst < /tmp/server.xml > /usr/local/tomcat/conf/server.xml &&
-      catalina.sh run"]
-    cpu_count: $R2_CPU_CORES
-    mem_limit: $R2_MEMORY
-    scale    : $R2_ENABLED
+  # r2: # ------------------------------------------------------------------------
+  #   container_name: hapi-r2
+  #   image: $R2_IMAGE
+  #   environment:
+  #     PORT: $R2_PORT
+  #   ports:
+  #     - $R2_PORT:8080
+  #   volumes:
+  #     - "r2-database:/usr/local/tomcat/target/database"
+  #   command: ["sh", "-c", "
+  #     envsubst < /tmp/hapi.properties.tpl > /config/hapi.properties &&
+  #     envsubst < /tmp/server.xml > /usr/local/tomcat/conf/server.xml &&
+  #     catalina.sh run"]
+  #   cpu_count: $R2_CPU_CORES
+  #   mem_limit: $R2_MEMORY
+  #   scale    : $R2_ENABLED
 
-  r3: # ------------------------------------------------------------------------
-    container_name: hapi-r3
-    image: $R3_IMAGE
-    environment:
-      PORT: $R3_PORT
-    ports:
-      - $R3_PORT:8080
-    volumes:
-      - "r3-database:/usr/local/tomcat/target/database"
-    command: ["sh", "-c", "
-      envsubst < /tmp/hapi.properties.tpl > /config/hapi.properties &&
-      envsubst < /tmp/server.xml > /usr/local/tomcat/conf/server.xml &&
-      catalina.sh run"]
-    cpu_count: $R3_CPU_CORES
-    mem_limit: $R3_MEMORY
-    scale: $R3_ENABLED
+  # r3: # ------------------------------------------------------------------------
+  #   container_name: hapi-r3
+  #   image: $R3_IMAGE
+  #   environment:
+  #     PORT: $R3_PORT
+  #   ports:
+  #     - $R3_PORT:8080
+  #   volumes:
+  #     - "r3-database:/usr/local/tomcat/target/database"
+  #   command: ["sh", "-c", "
+  #     envsubst < /tmp/hapi.properties.tpl > /config/hapi.properties &&
+  #     envsubst < /tmp/server.xml > /usr/local/tomcat/conf/server.xml &&
+  #     catalina.sh run"]
+  #   cpu_count: $R3_CPU_CORES
+  #   mem_limit: $R3_MEMORY
+  #   scale: $R3_ENABLED
 
   r4: # ------------------------------------------------------------------------
     container_name: hapi-r4
@@ -61,12 +61,12 @@ services:
     mem_limit: $R4_MEMORY
     scale: $R4_ENABLED
 
-  fhir-viewer: # ---------------------------------------------------------------
-    container_name: fhir-viewer
-    image: smartonfhir/fhir-viewer
-    scale: $FHIR_VIEWER_ENABLED
-    ports:
-      - "${FHIR_VIEWER_PORT}:80"
+  # fhir-viewer: # ---------------------------------------------------------------
+  #   container_name: fhir-viewer
+  #   image: smartonfhir/fhir-viewer
+  #   scale: $FHIR_VIEWER_ENABLED
+  #   ports:
+  #     - "${FHIR_VIEWER_PORT}:80"
     
   patient-browser: # -----------------------------------------------------------
     container_name: patient-browser
@@ -82,9 +82,9 @@ services:
     ports:
       - $PATIENT_BROWSER_PORT:80
     command: ["sh", "-c", "
-      envsubst < /usr/share/nginx/html/config/r2.tpl > \/usr/share/nginx/html/config/r2-local.json5 &&
-      envsubst < /usr/share/nginx/html/config/r3.tpl > \/usr/share/nginx/html/config/r3-local.json5 &&
-      envsubst < /usr/share/nginx/html/config/r4.tpl > \/usr/share/nginx/html/config/r4-local.json5 &&
+      envsubst < /usr/share/nginx/html/config/r2.tpl > /usr/share/nginx/html/config/r2-local.json5 &&
+      envsubst < /usr/share/nginx/html/config/r3.tpl > /usr/share/nginx/html/config/r3-local.json5 &&
+      envsubst < /usr/share/nginx/html/config/r4.tpl > /usr/share/nginx/html/config/r4-local.json5 &&
       nginx -g 'daemon off;'"]
     scale: $PATIENT_BROWSER_ENABLED
 
@@ -114,30 +114,30 @@ services:
     command: sh -c "envsubst < /usr/share/nginx/html/template.html > /usr/share/nginx/html/index.html && nginx -g 'daemon off;'"
     scale: $CONTROL_PANEL_ENABLED
 
-  smart-launcher: # ------------------------------------------------------------
-    container_name: launcher
-    image: smartonfhir/smart-launcher:latest
-    environment:
-      HOST                   : "${HOST}"
-      NODE_ENV               : "production"
-      LAUNCHER_BASE_URL      : "http://${HOST}:${LAUNCHER_PORT}"
-      BASE_URL               : "http://${HOST}:${LAUNCHER_PORT}"
-      FHIR_SERVER_R2         : "http://${HOST}:${R2_PORT}/hapi-fhir-jpaserver/fhir"
-      FHIR_SERVER_R3         : "http://${HOST}:${R3_PORT}/hapi-fhir-jpaserver/fhir"
-      FHIR_SERVER_R4         : "http://${HOST}:${R4_PORT}/hapi-fhir-jpaserver/fhir"
-      FHIR_SERVER_R2_INTERNAL: "http://r2:8080/hapi-fhir-jpaserver/fhir"
-      FHIR_SERVER_R3_INTERNAL: "http://r3:8080/hapi-fhir-jpaserver/fhir"
-      FHIR_SERVER_R4_INTERNAL: "http://r4:8080/hapi-fhir-jpaserver/fhir"
-      DISABLE_SANDBOXES      : "1"
-      CDS_SANDBOX_URL        : "https://sandbox.cds-hooks.org"
-      PICKER_CONFIG_R2       : "r2-local"
-      PICKER_CONFIG_R3       : "r3-local"
-      PICKER_CONFIG_R4       : "r4-local"
-      PICKER_ORIGIN          : "http://${HOST}:${PATIENT_BROWSER_PORT}"
-      STU2_ENABLED           : "${R2_ENABLED}"
-      STU3_ENABLED           : "${R3_ENABLED}"
-      STU4_ENABLED           : "${R4_ENABLED}"
-    ports:
-      - $LAUNCHER_PORT:80
-    scale: $LAUNCHER_ENABLED
+  # smart-launcher: # ------------------------------------------------------------
+  #   container_name: launcher
+  #   image: smartonfhir/smart-launcher:latest
+  #   environment:
+  #     HOST                   : "${HOST}"
+  #     NODE_ENV               : "production"
+  #     LAUNCHER_BASE_URL      : "http://${HOST}:${LAUNCHER_PORT}"
+  #     BASE_URL               : "http://${HOST}:${LAUNCHER_PORT}"
+  #     FHIR_SERVER_R2         : "http://${HOST}:${R2_PORT}/hapi-fhir-jpaserver/fhir"
+  #     FHIR_SERVER_R3         : "http://${HOST}:${R3_PORT}/hapi-fhir-jpaserver/fhir"
+  #     FHIR_SERVER_R4         : "http://${HOST}:${R4_PORT}/hapi-fhir-jpaserver/fhir"
+  #     FHIR_SERVER_R2_INTERNAL: "http://r2:8080/hapi-fhir-jpaserver/fhir"
+  #     FHIR_SERVER_R3_INTERNAL: "http://r3:8080/hapi-fhir-jpaserver/fhir"
+  #     FHIR_SERVER_R4_INTERNAL: "http://r4:8080/hapi-fhir-jpaserver/fhir"
+  #     DISABLE_SANDBOXES      : "1"
+  #     CDS_SANDBOX_URL        : "https://sandbox.cds-hooks.org"
+  #     PICKER_CONFIG_R2       : "r2-local"
+  #     PICKER_CONFIG_R3       : "r3-local"
+  #     PICKER_CONFIG_R4       : "r4-local"
+  #     PICKER_ORIGIN          : "http://${HOST}:${PATIENT_BROWSER_PORT}"
+  #     STU2_ENABLED           : "${R2_ENABLED}"
+  #     STU3_ENABLED           : "${R3_ENABLED}"
+  #     STU4_ENABLED           : "${R4_ENABLED}"
+  #   ports:
+  #     - $LAUNCHER_PORT:80
+  #   scale: $LAUNCHER_ENABLED
 
